# dbx_connect_fed

./: .gitignore  databricks-connect-config.txt  pyproject.toml
src/: nb1.py
src/pysparkapp/: target_query.py
