[tool.poetry]
name = "pysparkapp"
version = "0.1.0"
description = ""
authors = ["Federico.Aguirre <federico.aguirre@bjss.com>"]
readme = "README.md"
packages = [{include = "pysparkapp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
databricks-connect = "^10.4.12"
pylint = "^2.15.3"
wheel = "^0.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
